# 06_xAI_in_chemistry

./: .gitignore  .mcp.json  00_introduction.ipynb  01_feature_attribution_methods.ipynb  02_structure_attribution_methods.ipynb  03_counterfactual_explanations.ipynb  04_uncertainty_quantification.ipynb  CLAUDE.md  NOTEBOOK_STYLE_GUIDE.md  README.md  TODO.md  jupyter.sh  manage.py  pyproject.toml  utils.py
qrcodes/: README.txt
tests/: __init__.py  test_pgexplainer.py  test_pgexplainer_diagnostics.py
xai_chem_review/: __init__.py  data.py  utils.py
xai_chem_review/datasets/: aqsoldb.csv  aqsoldb_heaviest.csv  astatine_substituted.csv  mutagenicity.csv  pahs.csv  peptides.csv
