[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xai_chem_review"
version = "0.1.0"
description = "A review of XAI methods for chemistry applications"
license = { text = "MIT License" }
readme = "README.md"
authors = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"}
]
maintainers = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"}
]
keywords = [
    "Explainable AI",
    "Machine Learning",
    "Chemoinformatics",
    "Chemistry",
    "Jupyter Notebook",
    "Tutorial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


# Project Dependencies
# ====================
requires-python = ">=3.8,<=3.12"
dependencies = [
    "numpy>=1.21.0,<2.0",
    "matplotlib>=3.4.0",
    "pandas>=1.2.0,<2.0",
    "rdkit>=2024.3.1,<2026.0",
    "rich_click>=1.7.0,<2.0",
    # Deep learning and GNN dependencies
    "torch>=2.0.0",
    "torch_geometric>=2.4.0",
    "pytorch-lightning>=2.0.0",
    # XAI method dependencies
    "shap>=0.42.0",
    "captum>=0.6.0",
    "exmol>=2.1.0",
    # Molecular representation
    "selfies>=2.1.0",
    # Utility dependencies
    "scikit-learn>=1.0.0",
    "jupyterlab>=4.0.0",
]

# Executable Scripts
# ==================

[project.scripts]
xaichem = "xai_chem_review.cli:cli"

# Configuration of Build System (Hatchling)
# =========================================

[tool.hatch.build]
skip-excluded-dirs=true

[tool.hatch.build.targets.wheel]
packages = ["xai_chem_review"]

# Version Bumping
# ===============

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files = [
    {filename = "pyproject.toml", search="version = \"{current_version}\"", replace="version = \"{new_version}\""},
    {filename = "README.rst"},
    {filename = "chem_mat_data/VERSION"},
]

[tool.uv.sources]
vgd-counterfactuals = { git = "https://github.com/the16thpythonist/vgd_counterfactuals" }
